--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Test the code
-        run: pytest test_function.py
+        run: pytest test_functions.py
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
       #  run: |
