--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,8 @@ jobs:
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9"]
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+# Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
@@ -48,12 +47,11 @@ jobs:
       # Runs a single command using the runners shell
       - name: Test the code
         run: pytest test_functions.py
-      # Runs a set of commands using the runners shell
-      #- name: Run a multi-line script
-      #  run: |
-      #    echo Add other actions to build,
-      #    echo test, and deploy your project.
-      
+
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+         
       - name: Build and push Docker Image
         # On peut entrer les commandes directement ici login + build
         uses: mr-smithers-excellent/docker-build-push@v5
